--- a/topics/digital-humanities/tutorials/text_mining_chinese/tutorial.bib
+++ b/topics/digital-humanities/tutorials/text_mining_chinese/tutorial.bib
@@ -45,6 +45,7 @@
  year = {1938-10-16},
  subtitle = {Gao yue junmin shu 告粵軍民書 [Letter to Guangdong Army and Civilians]},
  abstract = {},
+ url = {https://sls.hkpl.gov.hk/digital-collection/p.html?cta_id=2495df409cb711ef9c2},
  userd = {5598}
 }
 
