--- a/news/_posts/2025-07-03-bb-tiaas.md
+++ b/news/_posts/2025-07-03-bb-tiaas.md
@@ -4,7 +4,7 @@ contributions:
   authorship: [nomadscientist]
 tags: [gtn, TIAAS]
 layout: news
-cover: news/images/spoc_images/2024_spoc_pretty.png"
+cover: news/images/spoc_images/2024_spoc_pretty.png
 coveralt: "A swirl of happy, psychedelic people holding up a Vulcan salute, surrounded by dots in different colours representing cells."
 
 ---
