--- a/topics/statistics/tutorials/unsupervised_flexynesis/tutorial.bib
+++ b/topics/statistics/tutorials/unsupervised_flexynesis/tutorial.bib
@@ -14,6 +14,33 @@
 #
 # You can remove the examples below
 
+@article{Batut2018,
+  doi = {10.1016/j.cels.2018.05.012},
+  url = {https://doi.org/10.1016/j.cels.2018.05.012},
+  year = {2018},
+  month = jun,
+  publisher = {Elsevier {BV}},
+  volume = {6},
+  number = {6},
+  pages = {752--758.e1},
+  author = {B{\'{e}}r{\'{e}}nice Batut and Saskia Hiltemann and Andrea Bagnacani and Dannon Baker and Vivek Bhardwaj and
+           Clemens Blank and Anthony Bretaudeau and Loraine Brillet-Gu{\'{e}}guen and Martin {\v{C}}ech and John Chilton
+           and Dave Clements and Olivia Doppelt-Azeroual and Anika Erxleben and Mallory Ann Freeberg and Simon Gladman and
+           Youri Hoogstrate and Hans-Rudolf Hotz and Torsten Houwaart and Pratik Jagtap and Delphine Larivi{\`{e}}re and
+           Gildas Le Corguill{\'{e}} and Thomas Manke and Fabien Mareuil and Fidel Ram{\'{i}}rez and Devon Ryan and
+           Florian Christoph Sigloch and Nicola Soranzo and Joachim Wolff and Pavankumar Videm and Markus Wolfien and
+           Aisanjiang Wubuli and Dilmurat Yusuf and James Taylor and Rolf Backofen and Anton Nekrutenko and Bj\"{o}rn Gr\"{u}ning},
+  title = {Community-Driven Data Analysis Training for Biology},
+  journal = {Cell Systems}
+}
+
+@online{gtn-website,
+  author = {GTN community},
+  title = {GTN Training Materials: Collection of tutorials developed and maintained by the worldwide Galaxy community},
+  url = {https://training.galaxyproject.org},
+  urldate = {2021-03-24}
+}
+
 @article{Uyar2024,
   title = {Flexynesis: A deep learning framework for bulk multi-omics data integration for precision oncology and beyond},
   url = {http://dx.doi.org/10.1101/2024.07.16.603606},
@@ -24,3 +51,46 @@
   month = jul
 }
 
+@article{DBLP:journals/corr/ZhaoSE17b,
+  author       = {Shengjia Zhao and
+                  Jiaming Song and
+                  Stefano Ermon},
+  title        = {InfoVAE: Information Maximizing Variational Autoencoders},
+  journal      = {CoRR},
+  volume       = {abs/1706.02262},
+  year         = {2017},
+  url          = {http://arxiv.org/abs/1706.02262},
+  eprinttype    = {arXiv},
+  eprint       = {1706.02262},
+  timestamp    = {Mon, 13 Aug 2018 16:46:40 +0200},
+  biburl       = {https://dblp.org/rec/journals/corr/ZhaoSE17b.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+@article{Stuart2019,
+  title = {Comprehensive Integration of Single-Cell Data},
+  volume = {177},
+  ISSN = {0092-8674},
+  url = {http://dx.doi.org/10.1016/j.cell.2019.05.031},
+  DOI = {10.1016/j.cell.2019.05.031},
+  number = {7},
+  journal = {Cell},
+  publisher = {Elsevier BV},
+  author = {Stuart,  Tim and Butler,  Andrew and Hoffman,  Paul and Hafemeister,  Christoph and Papalexi,  Efthymia and Mauck,  William M. and Hao,  Yuhan and Stoeckius,  Marlon and Smibert,  Peter and Satija,  Rahul},
+  year = {2019},
+  month = jun,
+  pages = {1888--1902.e21}
+}
+@article{Hao2021,
+  title = {Integrated analysis of multimodal single-cell data},
+  volume = {184},
+  ISSN = {0092-8674},
+  url = {http://dx.doi.org/10.1016/j.cell.2021.04.048},
+  DOI = {10.1016/j.cell.2021.04.048},
+  number = {13},
+  journal = {Cell},
+  publisher = {Elsevier BV},
+  author = {Hao,  Yuhan and Hao,  Stephanie and Andersen-Nissen,  Erica and Mauck,  William M. and Zheng,  Shiwei and Butler,  Andrew and Lee,  Maddie J. and Wilk,  Aaron J. and Darby,  Charlotte and Zager,  Michael and Hoffman,  Paul and Stoeckius,  Marlon and Papalexi,  Efthymia and Mimitou,  Eleni P. and Jain,  Jaison and Srivastava,  Avi and Stuart,  Tim and Fleming,  Lamar M. and Yeung,  Bertrand and Rogers,  Angela J. and McElrath,  Juliana M. and Blish,  Catherine A. and Gottardo,  Raphael and Smibert,  Peter and Satija,  Rahul},
+  year = {2021},
+  month = jun,
+  pages = {3573--3587.e29}
+}
