--- a/topics/imaging/tutorials/electrophoresis-gel-bands-image-analysis/tutorial.bib
+++ b/topics/imaging/tutorials/electrophoresis-gel-bands-image-analysis/tutorial.bib
@@ -57,7 +57,7 @@
 
 @article{Galaxy2024,
   title = {The Galaxy platform for accessible, reproducible, and collaborative data analyses: 2024 update},
-  author = {The Galaxy Community},
+  author = {{The Galaxy Community}},
   journal = {Nucleic Acids Research},
   volume = {52},
   number = {W1},
