tutorial needs review

--- a/topics/statistics/tutorials/flexynesis_survival/tutorial.bib
+++ b/topics/statistics/tutorials/flexynesis_survival/tutorial.bib
@@ -40,3 +40,24 @@
   url = {https://training.galaxyproject.org},
   urldate = {2021-03-24}
 }
+
+@online{cbioportal-website,
+  author = {cbioPortal community},
+  title = {GcBioPortal for cancer genomics},
+  url = {https://www.cbioportal.org/},
+  urldate = {2025-07-28}
+}
+
+@article{Koschmann2016,
+  title = {ATRX loss promotes tumor growth and impairs nonhomologous end joining DNA repair in glioma},
+  volume = {8},
+  ISSN = {1946-6242},
+  url = {http://dx.doi.org/10.1126/scitranslmed.aac8228},
+  DOI = {10.1126/scitranslmed.aac8228},
+  number = {328},
+  journal = {Science Translational Medicine},
+  publisher = {American Association for the Advancement of Science (AAAS)},
+  author = {Koschmann,  Carl and Calinescu,  Anda-Alexandra and Nunez,  Felipe J. and Mackay,  Alan and Fazal-Salom,  Janet and Thomas,  Daniel and Mendez,  Flor and Kamran,  Neha and Dzaman,  Marta and Mulpuri,  Lakshman and Krasinkiewicz,  Johnathon and Doherty,  Robert and Lemons,  Rosemary and Brosnan-Cashman,  Jacqueline A. and Li,  Youping and Roh,  Soyeon and Zhao,  Lili and Appelman,  Henry and Ferguson,  David and Gorbunova,  Vera and Meeker,  Alan and Jones,  Chris and Lowenstein,  Pedro R. and Castro,  Maria G.},
+  year = {2016},
+  month = mar
+}
