--- a/topics/statistics/tutorials/flexynesis_classification/tutorial.bib
+++ b/topics/statistics/tutorials/flexynesis_classification/tutorial.bib
@@ -40,3 +40,27 @@
   url = {https://training.galaxyproject.org},
   urldate = {2021-03-24}
 }
+
+@article{Uyar2024,
+  title = {Flexynesis: A deep learning framework for bulk multi-omics data integration for precision oncology and beyond},
+  url = {http://dx.doi.org/10.1101/2024.07.16.603606},
+  DOI = {10.1101/2024.07.16.603606},
+  publisher = {Cold Spring Harbor Laboratory},
+  author = {Uyar,  Bora and Savchyn,  Taras and Wurmus,  Ricardo and Sarigun,  Ahmet and Shaik,  Mohammed Maqsood and Franke,  Vedran and Akalin,  Altuna},
+  year = {2024},
+  month = jul
+}
+
+@online{cbioportal-website,
+  author = {cbioPortal community},
+  title = {GcBioPortal for cancer genomics},
+  url = {https://www.cbioportal.org/},
+  urldate = {2025-07-28}
+}
+
+@online{metabric-website,
+  author = {metabric community},
+  title = {METABRIC},
+  url = {https://ega-archive.org/studies/EGAS00000000083},
+  urldate = {2025-07-28}
+}
