add contributors and WorkflowHub citation

--- a/faqs/misc.bib
+++ b/faqs/misc.bib
@@ -93,3 +93,14 @@
 	issn         = {1534-5807},
 	url          = {http://dx.doi.org/10.1016/j.devcel.2019.02.022},
 }
+
+@article{gustafsson2025workflowhub,
+    title       = {WorkflowHub: a registry for computational workflows},
+    author      = {Gustafsson, Ove Johan Ragnar and Wilkinson, Sean R and Bacall, Finn and Soiland-Reyes, Stian and Leo, Simone and Pireddu, Luca and Owen, Stuart and Juty, Nick and Fern{\'a}ndez, Jos{\'e} M and Brown, Tom and others},
+    journal     = {Scientific Data},
+    volume      = {12},
+    number      = {1},
+    pages       = {837},
+    year        = {2025},
+    publisher   = {Nature Publishing Group UK London}
+}
