Apply suggestion from @bgruening

--- a/metadata/lang/it.yml
+++ b/metadata/lang/it.yml
@@ -20,7 +20,7 @@ intermediate: "Intermedio"
 advanced: "Avanzato"
 
 supporting-materials: "Materiali di supporto"
-slides: "Diapositive"
+slides: "slide"
 datasets: "Dataset"
 workflows: "Workflow"
 supporting-galaxies: "Disponibile su queste Galassie"
