Apply suggestion from @bgruening

--- a/metadata/lang/it.yml
+++ b/metadata/lang/it.yml
@@ -23,7 +23,7 @@ supporting-materials: "Materiali di supporto"
 slides: "slide"
 datasets: "Dataset"
 workflows: "Workflow"
-supporting-galaxies: "Disponibile su queste Galassie"
+supporting-galaxies: "Disponibile su queste Galaxy"
 last-modification: "Ultima modifica"
 published: "Pubblicato"
 revision: "Revisione"
