Apply suggestion from @bgruening

--- a/metadata/lang/it.yml
+++ b/metadata/lang/it.yml
@@ -69,7 +69,7 @@ feedback: "Feedback"
 feedback-text: "Hai usato questo materiale come istruttore? Sentiti libero di lasciarci un feedback."
 feedback-link-text: "Com'è andata"
 feedback-text-learner: "Hai usato questo materiale come studente? Clicca sul modulo qui sotto per lasciare un feedback."
-feedback-none: "Non è ancora stato ricevuto alcun feedback per questa formazione. Sii il primo a compilare il modulo di feedback."
+feedback-none: "Non è ancora stato ricevuto alcun feedback per questo tutorial. Sii il primo a compilare il modulo di feedback."
 funders-ack: "Queste persone o organizzazioni hanno fornito supporto finanziario per lo sviluppo di questa risorsa"
 
 glossary: "Glossario"
