Apply suggestion from @bgruening

--- a/metadata/lang/it.yml
+++ b/metadata/lang/it.yml
@@ -77,7 +77,7 @@ citing-tutorial: "Citare questo tutorial"
 congrats: "Congratulazioni per aver completato con successo questo tutorial!"
 
 want-extend-knowledge: "Vuoi approfondire le tue conoscenze?"
-recommended-followup: "Segui una delle nostre formazioni consigliate"
+recommended-followup: "Segui una dei nostri tutorial consigliati"
 
 license: "Licenza"
 license-tutorial: "Il contenuto del tutorial è concesso in licenza"
