Apply suggestion from @bgruening

--- a/metadata/lang/it.yml
+++ b/metadata/lang/it.yml
@@ -99,7 +99,7 @@ presenter-notes-explanation: |
   Questa finestra è collegata a quella principale. Cambiare diapositiva su una comporterà il cambio anche sull'altra.
 
   Utile durante le presentazioni.
-plaintext-slides: "Diapositive in testo semplice"
+plaintext-slides: "slide in testo semplice"
 video-slides: "Diapositive video"
 before-diving-in: "Prima di immergerti in questa presentazione, ti consigliamo di dare un’occhiata a"
 
