finish adjustments from ghent to brno

--- a/events/2025-11-24-gat-brno.md
+++ b/events/2025-11-24-gat-brno.md
@@ -39,19 +39,15 @@ contributions:
 infrastructure:
   custom:
     description: |
-        **Please review the prerequisites carefully before registering**. If you arrive without meeting the prerequisites then the workshop will be a frustrating experience.
+        **Please review the following prerequisites carefully before registering**. If you arrive without meeting the prerequisites then the workshop will be a frustrating experience.
 
         #### Comfortable with the Unix/Linux command line
 
         Most of the workshop will happen at the Linux command line. If you aren’t comfortable with this before you arrive, then you will be lost the entire time. How comfortable do you need to be? Here’s a sampling of commands and concepts that you should be comfortable with:
 
         ```
-        cd, mkdir, rmdir, ls
-        tar, gzip
-        cp, mv, rm, chmod, ln
-        ~, .., ./, /tmp,
-        cat, tail, less
-        man
+        cd, mkdir, rmdir, ls, tar, gzip, cp, mv, rm, chmod, chown, ln, cat, tail, less, man, grep
+        ~, .., ./, /tmp, |
         ```
 
         Note: *This is not an exhaustive list (or even a proper subset) of the commands that will be used in the workshop. They are included here to give you an idea of the depth of knowledge that is required.*
@@ -63,9 +59,22 @@ infrastructure:
 
         #### Competent in a Unix/Linux text editor
 
-        Linux has several text editors available in it. You'll need to be comfortable in at least one of them before the workshop starts. Organizers will make sure that these editors are available on the Linux images we use in the workshop:
+        Linux has several text editors available in it. You'll need to be comfortable in at least one of them before the workshop starts. We recommend that you use [Nano](https://www.nano-editor.org/), if you don't know another text editor. It's [simple and easy to use](https://www.howtogeek.com/42980/the-beginners-guide-to-nano-the-linux-command-line-text-editor/). If you know another editor like [Emacs](https://www.gnu.org/software/emacs/) or [VIM](http://www.vim.org/) you are of course welcome to use those as well.
+      
+        #### Experience with Linux Package Management
 
-        We recommend that you use [Nano](https://www.nano-editor.org/), if you don't know another text editor. It's [simple and easy to use](https://www.howtogeek.com/42980/the-beginners-guide-to-nano-the-linux-command-line-text-editor/). If you know another editor like [Emacs](https://www.gnu.org/software/emacs/) or [VIM](http://www.vim.org/) you are of course welcome to use those as well.
+        You don't need to be an expert at Linux package management, but you do need to have some experience at installing and upgrading packages on a Linux system.
+        We'll be using Ubuntu based images during the workshop, which means we’ll be using [**apt**](https://help.ubuntu.com/community/AptGet/Howto) to do package management. Get to know it.
+        Prerequisites include all of the Introduction Session prerequisites, plus familiarity with the topics presented in that session.
+
+        #### Laptop Requirements
+
+        All participants should bring a wifi-enabled laptop with
+
+        - Software to access the command line of a Linux server.
+            - If you are running Linux or Mac OS, then you already have this.
+            - If you are running Windows than you’ll need to get something like [putty](https://putty.software/) installed before the workshop.
+        - A recent version of either the Firefox or Chrome web browser installed.
 
 
 
@@ -253,101 +262,35 @@ Galaxy is an open web based platform for data integration and analysis. It is de
 
 Please see the Program tab
 
-### Prerequisites
+## Prerequisites
 
-**Please review the prerequisites carefully before registering**. If you arrive without meeting the prerequisites then the workshop will be a frustrating experience.
-
-#### Comfortable with the Unix/Linux command line
-
-Most of the workshop will happen at the Linux command line. If you aren’t comfortable with this before you arrive, then you will be lost the entire time. How comfortable do you need to be? Here’s a sampling of commands and concepts that you should be comfortable with:
-
-```
-cd, mkdir, rmdir, ls
-tar, gzip
-cp, mv, rm, chmod, ln
-~, .., ./, /tmp,
-cat, tail, less
-man
-```
-
-Note: *This is not an exhaustive list (or even a proper subset) of the commands that will be used in the workshop. They are included here to give you an idea of the depth of knowledge that is required.*
-
-We have a few tutorials that can help you get refreshed if you need:
-
-- [CLI Basics]({% link topics/data-science/tutorials/cli-basics/tutorial.md %})
-- [CLI Advanced]({% link topics/data-science/tutorials/cli-advanced/tutorial.md %})
-
-#### Competent in a Unix/Linux text editor
-
-Linux has several text editors available in it. You'll need to be comfortable in at least one of them before the workshop starts. Organizers will make sure that these editors are available on the Linux images we use in the workshop:
-
-We recommend that you use [Nano](https://www.nano-editor.org/), if you don't know another text editor. It's [simple and easy to use](https://www.howtogeek.com/42980/the-beginners-guide-to-nano-the-linux-command-line-text-editor/). If you know another editor like [Emacs](https://www.gnu.org/software/emacs/) or [VIM](http://www.vim.org/) you are of course welcome to use those as well.
-
-#### Some experience with Linux Package Management
-
-You don't need to be an expert at Linux package management, but you do need to have some experience at installing and upgrading packages on a Linux system.
-
-We'll be using Ubuntu based images during the workshop, which means we’ll be using [**apt**](https://help.ubuntu.com/community/AptGet/Howto) to do package management. Get to know it.
-
-Prerequisites include all of the Introduction Session prerequisites, plus familiarity with the topics presented in that session.
-
-## Laptop Requirements
-
-All participants should bring a wifi-enabled laptop with
-
-- (Optional but useful) Software to access the command line of a Linux server.
-    - If you are running Linux or Mac OS, then you already have this.
-    - If you are running Windows than you’ll need to get something like putty installed before the workshop.
-- A recent version of either the Firefox or Chrome web browser installed.
+Please see the Setup tab
 
 ## Registration
 
-Please apply via our form. We only have limited space so please register as soon as possible. If you would like to attend but have funding problems we can support up to 3 people from Low and Middle Income Countries. Please indicate this in the form or contact us directly.
+Please apply via our form. We only have limited space so please register as soon as possible. 
 
-Please feel free to contact us at contact@usegalaxy.eu if you have any question and check this site for any updates.
+Please feel free to contact us at [galaxy@cesnet.cz](mailto:galaxy@cesnet.cz) if you have any question and check this site for any updates.
 
 
 ## Logistics
 
-### Venue and Accommodation
+### Venue
 
-The Admin training will be held at:
-[Monasterium PoortAckere](https://monasterium.be/en) - 56 Oude Houtlei, Ghent 9000, Belgium ([map](https://goo.gl/maps/jZtVc2xeDVNfVLJW8))
-The venue is in the city centre of Ghent and within walking distance of [several historical attractions](https://visit.gent.be/en/see-do/historical-city-centre).
-The Monasterium PoortAckere is also a hotel. Participants can make their reservations by filling
-up the [hotel’s reservation form](https://drive.google.com/file/d/1udTluBz3hDpZg1aA95q7G10mhLrWwktD/view?usp=sharing) and sending it to reservations@historichotelsbelgium.com. The hotel should then confirm the reservation. We have been advised that reservations made using this route can be cancelled free of charge up to 2 weeks before arrival.
+The Admin training will be held in CESNET offices, Brno, Czechia ([map](https://maps.app.goo.gl/btN9zLdmwA8ubeSPA)).
+The venue is in the city centre of Brno, which is an amazing city to visit, see https://www.gotobrno.cz/.
 
-### Getting to Ghent
+### Accomodation
 
-#### By train
+There are many affordable hotels around and also plenty of opportunity for private accomodation. There is no organised effort or group reservation. If you are unsure where to book some tips for generic hotels nearby are: [Continental](https://www.continentalbrno.cz/en), [Avanti](https://www.hotelavanti.cz/en/), and [Cosmopolitan](https://www.hotelcosmopolitan.cz/en/).
 
-The city of Ghent has a page on the subject [here](https://visit.gent.be/en/good-know/practical-information/how-get-ghent/ghent-train).
-The main station in Ghent is [Gent-Sint-Pieters](https://visit.gent.be/en/see-do/gent-sint-pieters-station-hub-ghent) ([map](https://goo.gl/maps/LTsWAKf8Ugm2NNx67)).
-The Belgian railway system is well connected with the European railway system. Transfers are often at Bruxelles-Midi/Brussel-Zuid/Brussels-South, Antwerp, or Lille (France).
+### Getting to Brno
 
-The national railway company (SNCB/NMBS) offers an international route planner here.
+* **By train** - Plenty of trains arriving in Brno from all of Europe. The venue is 10 mins tram ride from the main train station.
+* **By plane** - Generally fly to Prague or Vienna and take a train or bus to Brno. There is a couple of flights landing in Brno directly but they are rare.
+* **By car** - Plenty of highways, drive safely.
 
-To reach the venue from Gent-Sint-Pieters station, one can take tram line 1 or 2 towards the city centre. The city of Ghent offers information on public transport here.
-Taxis are also available right outside of Gent-Sint-Pieters station.
+### Getting Around
 
-#### By plane
-
-The city of Ghent has a page on the subject [here](https://visit.gent.be/en/good-know/practical-information/how-reach-ghent/ghent-plane).
-
-The two main airports are [Brussels Airport](https://goo.gl/maps/VJwNSpEUEPzKX3Ye9) - BRU (a.k.a. Luchthaven Zaventem, Luchthaven Brussel-Nationaal,
-Brussel-Nationale Luchthaven, Aéroport de Bruxelles-National) and [Brussels South Charleroi Airport](https://goo.gl/maps/eVadL3G19sRUeoC26) - CRL.
-From Brussels Airport (BRU) it is convenient to take the train. There is a railway station beneath the airport. There, one can take the train to the [Gent-Sint-Pieters station](https://visit.gent.be/en/see-do/gent-sint-pieters-station-hub-ghent).
-The national railway company (SNCB/NMBS) offers a [route planner](https://www.belgiantrain.be/en).
-
-From Brussels South Charleroi Airport (CRL), there is a shuttle bus service operated by Flibco. Route planner [here](https://www.flibco.com/en).
-To reach the venue from Gent-Sint-Pieters station, one can take tram line 1 or 2 towards the city centre. The city of Ghent offers information on public transport here. Taxis are also available right outside of Gent-Sint-Pieters station.
-
-#### By car
-
-The city of Ghent has a page on the subject here.
-Be aware that the venue is inside Ghent’s Low Emission Zone (LEZ). You will likely need to register your car before being able to enter the LEZ
-([info here](https://visit.gent.be/en/low-emission-zone-ghent)).
-The LEZ is enforced with smart cameras and failing to register the vehicle can lead to a fine of €150 per violation.
-Be aware that parking in Ghent can be cumbersome and expensive. Please check the [venue’s page](https://monasterium.be/en/p/location) and the city of
-[Ghent page on parking](https://visit.gent.be/en/good-know/practical-information/how-reach-ghent/ghent-car/parking-ghent) for the available options.
+There is serious amount of public transportation available that will get you anywhere. Use Google Maps or https://mapy.com/en to find connections and use your card, phone, watch and any other **contactless** payment device to easily pay for it when entering the vehicle (details at https://www.pipniajed.cz/en.html).
 
