--- a/events/2025-11-24-gat-brno.md
+++ b/events/2025-11-24-gat-brno.md
@@ -280,9 +280,9 @@ Please feel free to contact us at [galaxy@cesnet.cz](mailto:galaxy@cesnet.cz) if
 The Admin training will be held in CESNET offices, Brno, Czechia ([map](https://maps.app.goo.gl/btN9zLdmwA8ubeSPA)).
 The venue is in the city centre of Brno, which is an amazing city to visit, see https://www.gotobrno.cz/.
 
-### Accomodation
+### Accommodation
 
-There are many affordable hotels around and also plenty of opportunity for private accomodation. There is no organised effort or group reservation. If you are unsure where to book some tips for generic hotels nearby are: [Continental](https://www.continentalbrno.cz/en), [Avanti](https://www.hotelavanti.cz/en/), and [Cosmopolitan](https://www.hotelcosmopolitan.cz/en/).
+There are many affordable hotels around and also plenty of opportunity for private accommodation. There is no organised effort or group reservation. If you are unsure where to book some tips for generic hotels nearby are: [Continental](https://www.continentalbrno.cz/en), [Avanti](https://www.hotelavanti.cz/en/), and [Cosmopolitan](https://www.hotelcosmopolitan.cz/en/).
 
 ### Getting to Brno
 
