fix link to registration form

--- a/events/2025-11-24-gat-brno.md
+++ b/events/2025-11-24-gat-brno.md
@@ -268,7 +268,7 @@ Please see the Setup tab
 
 ## Registration
 
-Please apply via our form. We only have limited space so please register as soon as possible. 
+Please apply via our [registration form](https://forms.gle/h93RzqGUNvf2gWJMA). We only have limited space so please register as soon as possible. 
 
 Please feel free to contact us at [galaxy@cesnet.cz](mailto:galaxy@cesnet.cz) if you have any question and check this site for any updates.
 
